--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/index.css" />
     <title>Chess</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+  </body>
   <script type="module" src="index.js"></script>
 </html>
